# memcache_plugin

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  memcache_plugin.cpp
android/src/main/kotlin/com/example/memcache_plugin/: MemcachePlugin.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: CMakeLists.txt  memcache_plugin_example.cpp
example/android/app/src/main/kotlin/com/example/memcache_plugin_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ffi/: MemCache_C.h
ios/: memcache_plugin.podspec
ios/Classes/: MemcachePlugin.swift
lib/: memcache_plugin.dart
lib/src/: memcache_generated_bindings.dart
test/: memcache_plugin_method_channel_test.dart  memcache_plugin_test.dart
